# autodns

./: .gitignore  Cargo.toml  LICENSE  README.md  SELINUX.md  autodns.service  build.sh  config.yaml  dns-manager.service  install.sh  uninstall.sh
selinux/: Makefile  README.md  autodns.te
src/: config.rs  dns_checker.rs  main.rs  resolv_conf.rs
tests/: helpers.rs  integration_tests.rs
