[package]
name = "dns-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
trust-dns-resolver = "0.23"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
