[package]
name = "autodns"
authors = ["Vagner Kaefer <vagner@cloudger.com.br>"]
version = "0.0.2"
edition = "2021"
description = "Autodns define o melhor DNS para seu servidor Linux"
homepage = "https://github.com/cloudger/autodns/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
trust-dns-resolver = "0.23"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
